# olena

./: .dir-locals.el  .gitignore  ANNOUNCE-1.0  ANNOUNCE-2.0  ANNOUNCE-2.1  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  TODO  VariantPointer.h  bootstrap  configure.ac  lrde-scmstats.sh  lrde-upload.sh
build-aux/: .gitignore  Makefile.am  build_unit_test.sh  cfitsio.m4  check_source_has_test.sh  check_test_hierarchy.sh  devtools.sh  devtools_utils.sh  extra-recursive-targets.mk  generate_dist_headers.sh  make_report_utils.sh  mln_add_file  mln_check_all_hh_headers  mln_check_all_hh_inclusions  mln_check_guards  mln_check_missing_all_hh_headers  mln_check_source_has_test  mln_check_test_hierarchy  mln_fix_guards  regen-recursive.mk  strip-lrde  swig.m4  tests-recursive.mk  tex.mk  texi2dvi  trimesh.m4  with-swilena.m4
doc/: .gitignore  Doxyfile.in  DoxygenLayout.xml  Makefile.am  about.dox  bibliography.dox  bibliography.hh  contributors.dox  doc.bib  doc.css  doxygen.css  footer.html  get_sources.dox  header.html  license.dox  license_commercial.dox  licensing.dox  lrde.bib  mainpage.dox  mainpage.hh  modules_list.dox  olena.bib  olena.qhcp  online_resources.dox  subdoc_footer.html  supported_platforms.dox
dynamic-use-of-static-c++/: .gitignore  .vcs  ChangeLog  Makefile.am  README  bootstrap  config.site  configure.ac
dynamic-use-of-static-c++/config/: Makefile.am  erbx  libiberty.m4  mk_local_config_rb_in.rb  pypath.m4  rbconfig_gen.rb  ruby.m4  swig.m4  warning.m4
dynamic-use-of-static-c++/data/: Makefile.am  function.cc
dynamic-use-of-static-c++/lib/: FIXME  libiberty-i486-linux.la  libiberty-i686-darwin9.la  libiberty-powerpc-darwin.la  libiberty-universal-darwin9.0.la
dynamic-use-of-static-c++/libmd5/: Makefile.am  driver.cc  md5.cc  md5.hh
dynamic-use-of-static-c++/src/: Makefile.am  all_methods.erb.cc  all_methods.erb.hh  config.hh.in  cxx_symbols.rb  data.cc  data.erb.hh  data.hh  data.hxx  dyn.hh  function.erb.cc  function.erb.hh  function_loader.cc  function_loader.hh  function_loader.rb  libiberty-fix.c  name_of.cc  name_of.hh  policy.cc  policy.hh  ruby_stream.cc  ruby_stream.hh
dynamic-use-of-static-c++/swig/: Makefile.am  dyn.i  mln.i  run.in  run.mk
dynamic-use-of-static-c++/test/: Makefile.am  test_containers.cc  test_damien.cc  test_function_loader.cc  test_function_loader.rb  test_function_loader_cxx.rb  test_methods.cc  test_milena.cc  test_olena.cc  test_var_and_val.cc
dynamic-use-of-static-c++/vcs/: dynamic_static_bridge_vcs.rb
extended/tests/: Makefile.am  abs.cc  accessor.cc  bind.cc  cast.cc  cfun.cc  cos.cc  id.cc  lit.cc  math.cc  optraits.cc
extended/xtd/: Makefile.am  accessor.hh  arg.hh  args.hh  bind.hh  case.hh  cast.hh  cfun.hh  literal.hh  math.hh  mexpr.hh  mfun.hh  mutator.hh  ops_expr.hh  optraits.hh  res.hh  traits.hh  valtraits.hh  vec.hh
metalic/mlc/: Makefile.am  TODO  abort.hh  any.hh  assert.hh  basic.hh  bexpr.hh  bool.hh  case.hh  char.hh  cmp.hh  comma.hh  contract.hh  elt.hh  flags.hh  if.hh  implies.hh  int.hh  is_a.hh  logic.hh  pair.hh  properties.hh  ret.hh  switch.hh  to_string.hh  type.hh  typedef.hh  uint.hh  unconst.hh  valist.hh  value.hh  values.hh  wrap.hh
metalic/tests/: Makefile.am  any.cc  case.cc  gcase.cc  if.cc  is_a.cc  or.cc  properties.cc  protected.cc  ret.cc  switch.cc  typedef.cc
milena/: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.BOOST  TODO  generate_dist_headers.sh  headers.mk  new-header  nodist-headers
milena/apps/: Makefile.am  apps.mk  data.hh.in
milena/core/: box.hh  box2d.hh  box_piter.hh  dpoint.hh  dpoint2d.hh  dpoints_piter.hh  dpoints_qiter.hh  exact.hh  image2d.hh  macros.hh  neighb.hh  neighb2d.hh  ops.hh  point.hh  point2d.hh  rectangle2d.hh  safe_image.hh  vec.hh  window.hh  window2d.cc  window2d.hh  window2d_qiter.cc
milena/debug/: println.hh
milena/doc/: .gitignore  Doxyfile.in  Doxyfile_user.in  DoxygenLayout.xml  Makefile.am  doc.mk  doxyfuns.sty  examples-outputs.mk  examples.dox  examples.mk  figures.mk  gen-examples-outputs-mk  gen-figures-mk  gen-make-variable  gen-split-examples-mk  gen-split-outputs-mk  generate_dist_files.sh  graphicx.hva  groups.hh  mainpage.dox  milena.qhcp  milena.sty  outputs.mk  pbm-figures.mk  pgm-figures.mk  ppm-figures.mk  programs-examples.mk  ref-guide.tex  split-examples.mk  split-outputs.mk  technical.tex  tutorial.tex  white-paper.tex
milena/img/: README  fly.pbm  fly.pgm  fly.ppm  fly_ascii.ppm  lena.pbm  lena.pgm  lena.ppm  lena_16.ppm  medium.pgm  medium.ppm  picasso.pbm  picasso.pgm  picasso.ppm  quite-small.pgm  small.pbm  small.ppm  space_debris.pgm  squares-lc.pgm  squares.pgm  test.fits  tiny.pbm  tiny.pgm  tiny.ppm  toto.pbm
milena/level/: compare.hh  fill.hh  paste.hh
milena/mesh/: Makefile.am  bunny-holefilled.off  cone-curv.off  cone-max-curv.off  cone-pinv-curv.off  cone.off  cube-max-curv.off  cube-pinv-curv.off  one-triangle.off  pseudo-manifold.vtk  socket-curv.off  socket-max-curv.off  socket-pinv-curv.off  teapot-max-curv.off  teapot-pinv-curv.off  teapot.off  teapot.vtk  tetrahedron-max-curv.off  tetrahedron-pinv-curv.off  tetrahedron.off  tetrahedron.vtk  three-triangles.off  two-triangles.off
milena/mlc/: equal.hh  same_coord.hh  same_point.hh
milena/mln/: all.hh  version.hh  version.hh.in
milena/morpho/: Rd.hh  erosion.hh
milena/sandbox/: ChangeLog
milena/test/: main.cc
scribo/: .gitignore  ChangeLog  Doxyfile  Doxyfile_tex  Makefile.am  NEWS  README  all.hh  common.mk  generate_dist_headers.sh  headers.mk  sauvola_fast.cc  scribo.mk  test.cc
swilena/: .gitignore  ChangeLog  Makefile.am  NEWS  box.ixx  box2d.i  box2d_piter.i  box_piter.ixx  ch_value.ixx  complex.ixx  complex2.i  concat.ixx  concrete.ixx  config.i  coord.ixx  dpoint2d.i  dynamic_image2d.i  fill.ixx  image2d.i  image2d.ixx  image2d_int.i  image2d_int_u8.i  image2d_point2d.i  image2d_rgb8.i  int_u.ixx  int_u24.i  int_u32.i  int_u8.i  intp.ixx  morpho.ixx  neighb2d.i  pgm.ixx  point2d.i  ppm.ixx  println.ixx  python-utils.ixx  rgb.ixx  rgb8.i  run.in  run.mk  (+1 more)
(+9834 files in other folders)
